# sst-oscillators-mit

./: CMakeLists.txt  README.md  azure-pipelines.yml
examples/: CMakeLists.txt  noodler.cpp
include-testclients/sst/oscillators/: APIJuceComponent.h  APITester.h
include/sst/oscillators/: APFPD.h  API.h  Helpers.h  SSE2Import.h  SimpleExample.h
tests/: APITest.cpp  CMakeLists.txt  HelpersTests.cpp
tests/catch2/: catch2.hpp
